--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         if('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('sw.js')
             })
         }
     </script>
